--- a/package.json
+++ b/package.json
@@ -4,14 +4,20 @@
   "private": true,
   "homepage": "https://DmytoStas/goit-react-hw-08-phonebook",
   "dependencies": {
+    "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@fontsource/roboto": "^5.0.8",
+    "@mui/icons-material": "^5.14.3",
+    "@mui/material": "^5.14.5",
+    "@mui/styled-engine-sc": "^5.12.0",
     "@redux-devtools/extension": "^3.2.5",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
-    "formik": "^2.4.2",
+    "formik": "^2.4.3",
+    "formik-mui": "^5.0.0-alpha.0",
     "nanoid": "^4.0.2",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
@@ -22,6 +28,7 @@
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "redux-persist": "^6.0.0",
+    "styled-components": "^5.3.11",
     "web-vitals": "^2.1.3",
     "yup": "^1.2.0"
   },
